fix(font): fix default font color for enough contrast

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,4 +1,4 @@
-$font-color-default: #808080;
+$font-color-default: #707070;
 $font-color-white: #e0e0e0;
 $font-family-default: 'Gothic', Arial, sans-serif;
 $font-family-header-default: 'Windsong', Arial, sans-serif;
